src/verimag/flata/parsers/CalcParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Calc.g 2013-11-11 16:03:47

	package verimag.flata.parsers;

	//import verimag.flata.parsers.CALexer;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

@SuppressWarnings("unused")
public class CalcParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "AND", "EQ", "PRINT", "PRINT_ARMC", "DOMAIN", "RANGE", "EXISTS", "TERMINATION", "PREFPERIOD", "COMPOSE", "COMMA", "WN", "ARRAYS", "SCALARS", "TRUE", "FALSE", "LPAR_C", "RPAR_C", "LPAR", "RPAR", "LOCALS", "GLOBALS", "PORT_IN", "PORT_OUT", "AUTOMATA", "AUTOMATON", "AUTOMATON_WITH_SYMBOLS", "INITIAL", "FINAL", "ERROR", "TRANSITIONS", "TRANSITION", "TERMS", "GUARDS", "GUARD", "ACTIONS", "ACTION", "CONSTRAINTS", "CONSTRAINT", "CALL", "CONSTR_INPUT", "ASSIGN", "ID", "PRIMED_ID", "OR", "NOT", "CL_PLUS", "CL_STAR", "CL_EXPR", "ABSTR_D", "ABSTR_O", "ABSTR_L", "NEQ", "LEQ", "LESS", "GEQ", "GREATER", "DIVIDES", "CONST", "NUM", "ALPHA", "ALPHANUM", "ABSTR", "WHITESPACE", "SINGLE_COMMENT", "MULTI_COMMENT", "STRSTR", "':'", "';'", "'.'"
    };
    public static final int EOF=-1;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int PLUS=4;
    public static final int MINUS=5;
    public static final int MULT=6;
    public static final int AND=7;
    public static final int EQ=8;
    public static final int PRINT=9;
    public static final int PRINT_ARMC=10;
    public static final int DOMAIN=11;
    public static final int RANGE=12;
    public static final int EXISTS=13;
    public static final int TERMINATION=14;
    public static final int PREFPERIOD=15;
    public static final int COMPOSE=16;
    public static final int COMMA=17;
    public static final int WN=18;
    public static final int ARRAYS=19;
    public static final int SCALARS=20;
    public static final int TRUE=21;
    public static final int FALSE=22;
    public static final int LPAR_C=23;
    public static final int RPAR_C=24;
    public static final int LPAR=25;
    public static final int RPAR=26;
    public static final int LOCALS=27;
    public static final int GLOBALS=28;
    public static final int PORT_IN=29;
    public static final int PORT_OUT=30;
    public static final int AUTOMATA=31;
    public static final int AUTOMATON=32;
    public static final int AUTOMATON_WITH_SYMBOLS=33;
    public static final int INITIAL=34;
    public static final int FINAL=35;
    public static final int ERROR=36;
    public static final int TRANSITIONS=37;
    public static final int TRANSITION=38;
    public static final int TERMS=39;
    public static final int GUARDS=40;
    public static final int GUARD=41;
    public static final int ACTIONS=42;
    public static final int ACTION=43;
    public static final int CONSTRAINTS=44;
    public static final int CONSTRAINT=45;
    public static final int CALL=46;
    public static final int CONSTR_INPUT=47;
    public static final int ASSIGN=48;
    public static final int ID=49;
    public static final int PRIMED_ID=50;
    public static final int OR=51;
    public static final int NOT=52;
    public static final int CL_PLUS=53;
    public static final int CL_STAR=54;
    public static final int CL_EXPR=55;
    public static final int ABSTR_D=56;
    public static final int ABSTR_O=57;
    public static final int ABSTR_L=58;
    public static final int NEQ=59;
    public static final int LEQ=60;
    public static final int LESS=61;
    public static final int GEQ=62;
    public static final int GREATER=63;
    public static final int DIVIDES=64;
    public static final int CONST=65;
    public static final int NUM=66;
    public static final int ALPHA=67;
    public static final int ALPHANUM=68;
    public static final int ABSTR=69;
    public static final int WHITESPACE=70;
    public static final int SINGLE_COMMENT=71;
    public static final int MULTI_COMMENT=72;
    public static final int STRSTR=73;

    // delegates
    // delegators


        public CalcParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CalcParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CalcParser.tokenNames; }
    public String getGrammarFileName() { return "Calc.g"; }


    	//protected void mismatch(IntStream input, int ttype, BitSet follow)
    	//	throws RecognitionException
    	//	{
    	//		throw new MismatchedTokenException(ttype, input);
    	//	}
    	//public Object recoverFromMismatchedSet(IntStream input,
    	//	RecognitionException e,
    	//	BitSet follow)
    	//	throws RecognitionException
    	//	{
    	//		throw e;
    	//	}
        public void reportError(RecognitionException e) {
        	super.reportError(e);
        	System.exit(-1);
        }


    public static class constrs_input_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "constrs_input"
    // Calc.g:153:1: constrs_input : ( constr_input )* ;
    public final CalcParser.constrs_input_return constrs_input() throws RecognitionException {
        CalcParser.constrs_input_return retval = new CalcParser.constrs_input_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CalcParser.constr_input_return constr_input1 = null;



        try {
            // Calc.g:154:2: ( ( constr_input )* )
            // Calc.g:154:4: ( constr_input )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // Calc.g:154:4: ( constr_input )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==LPAR_C) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Calc.g:154:6: constr_input
            	    {
            	    pushFollow(FOLLOW_constr_input_in_constrs_input465);
            	    constr_input1=constr_input();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, constr_input1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        	//catch (RecognitionException e) {
        	//	throw e;
        	//}
        finally {
        }
        return retval;
    }
    // $ANTLR end "constrs_input"

    public static class constr_input_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "constr_input"
    // Calc.g:156:1: constr_input : LPAR_C constraints RPAR_C -> ^( CONSTR_INPUT constraints ) ;
    public final CalcParser.constr_input_return constr_input() throws RecognitionException {
        CalcParser.constr_input_return retval = new CalcParser.constr_input_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LPAR_C2=null;
        Token RPAR_C4=null;
        CalcParser.constraints_return constraints3 = null;


        CommonTree LPAR_C2_tree=null;
        CommonTree RPAR_C4_tree=null;
        RewriteRuleTokenStream stream_RPAR_C=new RewriteRuleTokenStream(adaptor,"token RPAR_C");
        RewriteRuleTokenStream stream_LPAR_C=new RewriteRuleTokenStream(adaptor,"token LPAR_C");
        RewriteRuleSubtreeStream stream_constraints=new RewriteRuleSubtreeStream(adaptor,"rule constraints");
        try {
            // Calc.g:157:2: ( LPAR_C constraints RPAR_C -> ^( CONSTR_INPUT constraints ) )
            // Calc.g:157:4: LPAR_C constraints RPAR_C
            {
            LPAR_C2=(Token)match(input,LPAR_C,FOLLOW_LPAR_C_in_constr_input478); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LPAR_C.add(LPAR_C2);

            pushFollow(FOLLOW_constraints_in_constr_input480);
            constraints3=constraints();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_constraints.add(constraints3.getTree());
            RPAR_C4=(Token)match(input,RPAR_C,FOLLOW_RPAR_C_in_constr_input482); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RPAR_C.add(RPAR_C4);



            // AST REWRITE
            // elements: constraints
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 158:4: -> ^( CONSTR_INPUT constraints )
            {
                // Calc.g:158:7: ^( CONSTR_INPUT constraints )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CONSTR_INPUT, "CONSTR_INPUT"), root_1);

                adaptor.addChild(root_1, stream_constraints.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        	//catch (RecognitionException e) {
        	//	throw e;
        	//}
        finally {
        }
        return retval;
    }
    // $ANTLR end "constr_input"

    public static class calc_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "calc"
    // Calc.g:162:1: calc : ( calc_statement )* ;
    public final CalcParser.calc_return calc() throws RecognitionException {
        CalcParser.calc_return retval = new CalcParser.calc_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CalcParser.calc_statement_return calc_statement5 = null;



        try {
            // Calc.g:163:2: ( ( calc_statement )* )
            // Calc.g:163:4: ( calc_statement )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // Calc.g:163:4: ( calc_statement )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=PRINT && LA2_0<=PRINT_ARMC)||(LA2_0>=TERMINATION && LA2_0<=PREFPERIOD)||LA2_0==ID) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // Calc.g:163:5: calc_statement
            	    {
            	    pushFollow(FOLLOW_calc_statement_in_calc508);
            	    calc_statement5=calc_statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, calc_statement5.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        	//catch (RecognitionException e) {
        	//	throw e;
        	//}
        finally {
        }
        return retval;
    }
    // $ANTLR end "calc"

    public static class calc_statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "calc_statement"
    // Calc.g:165:1: calc_statement : ( calc_print | calc_print_armc | calc_store | calc_termination | calc_prefperiod );
    public final CalcParser.calc_statement_return calc_statement() throws RecognitionException {
        CalcParser.calc_statement_return retval = new CalcParser.calc_statement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CalcParser.calc_print_return calc_print6 = null;

        CalcParser.calc_print_armc_return calc_print_armc7 = null;

        CalcParser.calc_store_return calc_store8 = null;

        CalcParser.calc_termination_return calc_termination9 = null;

        CalcParser.calc_prefperiod_return calc_prefperiod10 = null;



        try {
            // Calc.g:166:2: ( calc_print | calc_print_armc | calc_store | calc_termination | calc_prefperiod )
            int alt3=5;
            switch ( input.LA(1) ) {
            case PRINT:
                {
                alt3=1;
                }
                break;
            case PRINT_ARMC:
                {
                alt3=2;
                }
                break;
            case ID:
                {
                alt3=3;
                }
                break;
            case TERMINATION:
                {
                alt3=4;
                }
                break;
            case PREFPERIOD:
                {
                alt3=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // Calc.g:166:4: calc_print
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_calc_print_in_calc_statement520);
                    calc_print6=calc_print();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, calc_print6.getTree());

                    }
                    break;
                case 2 :
                    // Calc.g:167:4: calc_print_armc
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_calc_print_armc_in_calc_statement525);
                    calc_print_armc7=calc_print_armc();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, calc_print_armc7.getTree());

                    }
                    break;
                case 3 :
                    // Calc.g:168:4: calc_store
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_calc_store_in_calc_statement530);
                    calc_store8=calc_store();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, calc_store8.getTree());

                    }
                    break;
                case 4 :
                    // Calc.g:169:4: calc_termination
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_calc_termination_in_calc_statement535);
                    calc_termination9=calc_termination();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, calc_termination9.getTree());

                    }
                    break;
                case 5 :
                    // Calc.g:170:4: calc_prefperiod
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_calc_prefperiod_in_calc_statement540);
                    calc_prefperiod10=calc_prefperiod();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, calc_prefperiod10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        	//catch (RecognitionException e) {
        	//	throw e;
        	//}
        finally {
        }
        return retval;
    }
    // $ANTLR end "calc_statement"

    public static class calc_store_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "calc_store"
    // Calc.g:172:1: calc_store : ID ':' be_e0 ';' ;
    public final CalcParser.calc_store_return calc_store() throws RecognitionException {
        CalcParser.calc_store_return retval = new CalcParser.calc_store_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID11=null;
        Token char_literal12=null;
        Token char_literal14=null;
        CalcParser.be_e0_return be_e013 = null;


        CommonTree ID11_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree char_literal14_tree=null;

        try {
            // Calc.g:173:2: ( ID ':' be_e0 ';' )
            // Calc.g:173:4: ID ':' be_e0 ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            ID11=(Token)match(input,ID,FOLLOW_ID_in_calc_store550); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID11_tree = (CommonTree)adaptor.create(ID11);
            root_0 = (CommonTree)adaptor.becomeRoot(ID11_tree, root_0);
            }
            char_literal12=(Token)match(input,74,FOLLOW_74_in_calc_store553); if (state.failed) return retval;
            pushFollow(FOLLOW_be_e0_in_calc_store556);
            be_e013=be_e0();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, be_e013.getTree());
            char_literal14=(Token)match(input,75,FOLLOW_75_in_calc_store558); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        	//catch (RecognitionException e) {
        	//	throw e;
        	//}
        finally {
        }
        return retval;
    }
    // $ANTLR end "calc_store"

    public static class calc_print_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "calc_print"
    // Calc.g:175:1: calc_print : PRINT print_term ( ',' print_term )* ';' ;
    public final CalcParser.calc_print_return calc_print() throws RecognitionException {
        CalcParser.calc_print_return retval = new CalcParser.calc_print_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PRINT15=null;
        Token char_literal17=null;
        Token char_literal19=null;
        CalcParser.print_term_return print_term16 = null;

        CalcParser.print_term_return print_term18 = null;


        CommonTree PRINT15_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree char_literal19_tree=null;

        try {
            // Calc.g:176:2: ( PRINT print_term ( ',' print_term )* ';' )
            // Calc.g:176:4: PRINT print_term ( ',' print_term )* ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            PRINT15=(Token)match(input,PRINT,FOLLOW_PRINT_in_calc_print569); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            PRINT15_tree = (CommonTree)adaptor.create(PRINT15);
            root_0 = (CommonTree)adaptor.becomeRoot(PRINT15_tree, root_0);
            }
            pushFollow(FOLLOW_print_term_in_calc_print572);
            print_term16=print_term();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, print_term16.getTree());
            // Calc.g:176:22: ( ',' print_term )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==COMMA) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // Calc.g:176:23: ',' print_term
            	    {
            	    char_literal17=(Token)match(input,COMMA,FOLLOW_COMMA_in_calc_print575); if (state.failed) return retval;
            	    pushFollow(FOLLOW_print_term_in_calc_print578);
            	    print_term18=print_term();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, print_term18.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            char_literal19=(Token)match(input,75,FOLLOW_75_in_calc_print582); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        	//catch (RecognitionException e) {
        	//	throw e;
        	//}
        finally {
        }
        return retval;
    }
    // $ANTLR end "calc_print"

    public static class calc_print_armc_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "calc_print_armc"
    // Calc.g:178:1: calc_print_armc : PRINT_ARMC be_e0 ';' ;
    public final CalcParser.calc_print_armc_return calc_print_armc() throws RecognitionException {
        CalcParser.calc_print_armc_return retval = new CalcParser.calc_print_armc_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PRINT_ARMC20=null;
        Token char_literal22=null;
        CalcParser.be_e0_return be_e021 = null;


        CommonTree PRINT_ARMC20_tree=null;
        CommonTree char_literal22_tree=null;

        try {
            // Calc.g:179:2: ( PRINT_ARMC be_e0 ';' )
            // Calc.g:179:4: PRINT_ARMC be_e0 ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            PRINT_ARMC20=(Token)match(input,PRINT_ARMC,FOLLOW_PRINT_ARMC_in_calc_print_armc593); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            PRINT_ARMC20_tree = (CommonTree)adaptor.create(PRINT_ARMC20);
            root_0 = (CommonTree)adaptor.becomeRoot(PRINT_ARMC20_tree, root_0);
            }
            pushFollow(FOLLOW_be_e0_in_calc_print_armc596);
            be_e021=be_e0();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, be_e021.getTree());
            char_literal22=(Token)match(input,75,FOLLOW_75_in_calc_print_armc598); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        	//catch (RecognitionException e) {
        	//	throw e;
        	//}
        finally {
        }
        return retval;
    }
    // $ANTLR end "calc_print_armc"

    public static class calc_prefperiod_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "calc_prefperiod"
    // Calc.g:181:1: calc_prefperiod : PREFPERIOD LPAR ID COMMA ID COMMA ID RPAR ';' ;
    public final CalcParser.calc_prefperiod_return calc_prefperiod() throws RecognitionException {
        CalcParser.calc_prefperiod_return retval = new CalcParser.calc_prefperiod_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PREFPERIOD23=null;
        Token LPAR24=null;
        Token ID25=null;
        Token COMMA26=null;
        Token ID27=null;
        Token COMMA28=null;
        Token ID29=null;
        Token RPAR30=null;
        Token char_literal31=null;

        CommonTree PREFPERIOD23_tree=null;
        CommonTree LPAR24_tree=null;
        CommonTree ID25_tree=null;
        CommonTree COMMA26_tree=null;
        CommonTree ID27_tree=null;
        CommonTree COMMA28_tree=null;
        CommonTree ID29_tree=null;
        CommonTree RPAR30_tree=null;
        CommonTree char_literal31_tree=null;

        try {
            // Calc.g:182:2: ( PREFPERIOD LPAR ID COMMA ID COMMA ID RPAR ';' )
            // Calc.g:182:4: PREFPERIOD LPAR ID COMMA ID COMMA ID RPAR ';'
            {
            root_0 = (CommonTree)adaptor.nil();
